Bug 284783 - "collection with the same name already exists" with owncloud carddav
Summary: "collection with the same name already exists" with owncloud carddav
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 319458 325887 327363 327777 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-23 13:28 UTC by Marius
Modified: 2014-08-30 10:20 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments
akonadiconsole log file (45.44 KB, text/html)
2013-01-03 15:58 UTC, ro.ggi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marius 2011-10-23 13:28:39 UTC
Version:           unspecified (using KDE 4.7.2) 
OS:                Linux

I get an error message with this contents every few minutes after adding an owncloud webdav/carddav resource to akonadi, which connects to an owncloud carddav location. Nevertheless I can view and edit contacts from that resource.

Reproducible: Always

Steps to Reproduce:
Add a webdav resource which points to an owncloud carddav resource.

Actual Results:  
The above mentioned error message appears every few minutes.

Expected Results:  
No error message...

OS: Linux (i686) release 3.0.0-12-generic
Compiler: gcc
Comment 1 m0nk 2012-02-10 12:36:43 UTC
Same here with KDE 4.8.0, openSuSE 12.1. Interval of the message depends on the interval of the sync. Bug is quiet old now.
Comment 2 Ingo Ratsdorf 2012-07-16 11:00:34 UTC
Same here with KDE 4.8.4 and a zarafa caldav collection.
Highly annoying the continuous popups and sounds. Can apparently not even be switched off.
Comment 3 Giedrius Stanevicius 2012-09-22 13:51:39 UTC
Same problem with Kubuntu, KDE 4.9.1 and current OwnCloud snapshot from git repository
Comment 4 m0nk 2012-10-03 09:53:38 UTC
Now on openSUSE 12.2 and owncloud 4.5RC1 and trara... Bug is here again.
Removed the collection already and added it new. Doesn't help.
Pathes to the resources have changed btw. 
CardDav is <server>/<owncloud-installation>/remote.php/carddav
CalDav is <server>/<owncloud-installation>/remote.php/caldav
Carddav component also has difficulties in fetching the resource apart from this issue.
Comment 5 Thomas Tanghus 2012-10-03 10:39:59 UTC
(In reply to comment #4)
> CardDav is <server>/<owncloud-installation>/remote.php/carddav
> CalDav is <server>/<owncloud-installation>/remote.php/caldav

Probably not related, but these paths should have a slash appended as in
  <server>/<owncloud-installation>/remote.php/caldav/
Comment 6 Telmo Xtra 2012-11-11 09:36:13 UTC
I'm running the latest release of KDE 4.9.3, and I can confirm this issue.

Also I'm running Owncloud 4.5.1
Comment 7 ro.ggi 2013-01-03 15:58:49 UTC
Created attachment 76162 [details]
akonadiconsole log file

I get this error also when I restart owncloud resource in akonadiconsole, so I have attached a log file created directly after restarting.

OwnCloud 4.0.10 on owncloud.portknox.net
Kontact 4.9.3
Comment 8 Grégory Oestreicher 2013-03-15 22:25:14 UTC
Thanks for the log. The issue is that you have a calendar and an address book both named 'default'. It may sound counter intuitive, but both collections live in the same namespace inside Akonadi, so they can't share the same name.

The resource included an unreliable (as this bug proves) workaround that'll have to be rewritten. In the meantime you can remove this message by rename either your address book or your calendar from ownCloud.

Cheers,
Grégory
Comment 9 Grégory Oestreicher 2013-05-08 19:45:23 UTC
*** Bug 319458 has been marked as a duplicate of this bug. ***
Comment 10 Martin Koller 2014-01-31 20:45:07 UTC
*** Bug 327363 has been marked as a duplicate of this bug. ***
Comment 11 Martin Koller 2014-01-31 20:52:00 UTC
*** Bug 327777 has been marked as a duplicate of this bug. ***
Comment 12 Martin Koller 2014-01-31 21:49:13 UTC
*** Bug 325887 has been marked as a duplicate of this bug. ***
Comment 13 Grégory Oestreicher 2014-08-30 10:17:52 UTC
Git commit 6f5f065cfb2ad69cd3ca97ef24cbd6db3fb6ceab by Grégory Oestreicher.
Committed on 29/08/2014 at 19:07.
Pushed by goestreicher into branch 'dav-fix-4.13'.

Fix duplicate collection names in the same resource

Use the display name attribute instead of the collection
name to prevent naming conflicts if a calendar and an address
book happen to have the same name.

M  +5    -4    resources/dav/resource/davgroupwareresource.cpp

http://commits.kde.org/kdepim-runtime/6f5f065cfb2ad69cd3ca97ef24cbd6db3fb6ceab
Comment 14 Grégory Oestreicher 2014-08-30 10:17:55 UTC
Git commit 69e77bd9386e28604714c22c14d0e19b06742989 by Grégory Oestreicher.
Committed on 29/08/2014 at 19:07.
Pushed by goestreicher into branch 'dav-fix-4.14'.

Fix duplicate collection names in the same resource

Use the display name attribute instead of the collection
name to prevent naming conflicts if a calendar and an address
book happen to have the same name.

M  +5    -4    resources/dav/resource/davgroupwareresource.cpp

http://commits.kde.org/kdepim-runtime/69e77bd9386e28604714c22c14d0e19b06742989
Comment 15 Grégory Oestreicher 2014-08-30 10:20:19 UTC
Git commit 91e78a95f3faee383370b0b7319c67a315d8ee48 by Grégory Oestreicher.
Committed on 29/08/2014 at 19:07.
Pushed by goestreicher into branch 'KDE/4.14'.

Fix duplicate collection names in the same resource

Use the display name attribute instead of the collection
name to prevent naming conflicts if a calendar and an address
book happen to have the same name.
FIXED-IN: 4.14.1

M  +5    -4    resources/dav/resource/davgroupwareresource.cpp

http://commits.kde.org/kdepim-runtime/91e78a95f3faee383370b0b7319c67a315d8ee48