Fix duplicate collection names in the same resource

Use the display name attribute instead of the collection
name to prevent naming conflicts if a calendar and an address
book happen to have the same name.

BUG: 284783